# kria-ai-assistant-desktop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cpu  KRIA_IMPLEMENTATION_PLAN.md  KRIA_REQUIREMENTS.md  LICENSE  README.md  TestPrompts.txt  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  smoke-test.yml  update-manifest.yml
config/: default.toml  mcp_servers.json  models.yaml
crates/kria-core/: Cargo.toml
crates/kria-core/assets/comfy_workflows/: standard_lora.json  text_heavy.json
crates/kria-core/src/: config.rs  lib.rs
crates/kria-core/src/agent/: interaction.rs  loop_engine.rs  mod.rs  planner.rs  prompts.rs  response_parser.rs  router.rs  turn_context.rs
crates/kria-core/src/automation/: event_bus.rs  macros.rs  mod.rs  proactive.rs  scheduler.rs  workflows.rs
crates/kria-core/src/image/: capabilities.rs  cloud.rs  comfy.rs  mod.rs  mode.rs  orchestrator.rs  prompt_enhancer.rs  styles.rs  swap.rs  ws_bridge.rs
crates/kria-core/src/infra/: circuit_breaker.rs  component.rs  download.rs  event_bus.rs  hardware_profiler.rs  health.rs  isolation.rs  logging.rs  mod.rs  pipeline_trace.rs  provisioning.rs  supervisor.rs
crates/kria-core/src/llm/: cloud.rs  local.rs  mod.rs  model_manager.rs  model_router.rs  server_binary.rs  tokenize.rs
crates/kria-core/src/llm/orchestrator/: child_guard.rs  gpu_watchdog.rs  mod.rs  server_manager.rs  strategy.rs  telemetry.rs  tier_strategy.rs
crates/kria-core/src/mcp/: capability_discovery.rs  client.rs  mod.rs  payload_shaper.rs  protocol.rs  server_manager.rs  tool_bridge.rs
crates/kria-core/src/memory/: decay.rs  embeddings.rs  facts.rs  mod.rs  rag.rs  retrieval.rs  store.rs  vectors.rs
crates/kria-core/src/platform/: app_registry.rs  contacts.rs  detect.rs  mod.rs  os.rs  paths.rs  sandbox.rs  telegram.rs  vram.rs
crates/kria-core/src/platform/inbox/: adapter.rs  approval.rs  egress.rs  media.rs  mod.rs  policy.rs  queue.rs
crates/kria-core/src/platform/intent/: capability.rs  dispatcher.rs  grammar.rs  linux.rs  macos.rs  mod.rs  resolution.rs  scheme.rs  windows.rs
crates/kria-core/src/plugin/: mod.rs  runtime.rs
crates/kria-core/src/preprocessing/: code.rs  document.rs  image.rs  mod.rs  token_budget.rs  web.rs
crates/kria-core/src/routing/: cache.rs  decide.rs  domain.rs  embed.rs  mod.rs  ood.rs  segment.rs  trace.rs  verbs.rs
crates/kria-core/src/safety/: audit.rs  blacklist.rs  hitl.rs  mod.rs  pin_guard.rs  policy.rs  rollback.rs
crates/kria-core/src/sidecar/: bootstrap.rs  bridge.rs  health.rs  mod.rs  protocol.rs
crates/kria-core/src/tools/: app_lifecycle.rs  communication.rs  desktop.rs  developer.rs  disk.rs  documents.rs  file_ops.rs  google_workspace.rs  google_workspace_contract.rs  i18n.rs  image_generation.rs  interaction.rs  internet.rs  knowledge.rs  mod.rs  mount_manager.rs  news.rs  packages.rs  power.rs  precognitive.rs  proactive.rs  process.rs  rag.rs  registry.rs  scheduler.rs  shell.rs  system_config.rs  system_info.rs  vision.rs
crates/kria-core/src/voice/: capture.rs  metrics.rs  mod.rs  pipeline.rs  playback.rs  stt.rs  tier.rs  tts.rs  vad.rs
crates/kria-core/src/voice/v2/: aec.rs  mod.rs  pipeline.rs  playback.rs  post_edit.rs  sentence.rs  stt.rs  tts.rs  wake.rs
crates/kria-core/tests/: automation_tests.rs  bug_fix_tests.rs  colab_capabilities_integration.rs  config_tests.rs  dangerous_live_tests.rs  desktop_tests.rs  developer_tests.rs  hardware_tests.rs  i18n_tests.rs  image_generation_test.rs  image_mode_test.rs  issue_fix_tests.rs  mcp_tests.rs  memory_tests.rs  packages_tests.rs  phase05_sidecar_tests.rs  phase0_agent_loop_tests.rs  phase1_memory_tests.rs  phase2_internet_tests.rs  phase3_file_code_tests.rs  phase4_vision_tests.rs  phase5_voice_tests.rs  proactive_tests.rs  quality_hallucination_tests.rs  rag_tests.rs  safety_tests.rs  test_chat_regression.rs  test_dev_packages.rs  test_files.rs  test_gworkspace_mcp.rs  test_interaction_desktop.rs  test_internet.rs  test_memory_knowledge.rs  test_multistep.rs  test_safety_routing.rs  test_smoke_system.rs  test_vision.rs  voice_live_tests.rs
crates/kria-core/tests/common/: mod.rs
crates/kria-desktop/: Cargo.toml  tauri.conf.json
crates/kria-desktop/capabilities/: default.json
crates/kria-desktop/src/: commands.rs  main.rs  tray.rs
crates/kria-server/: Cargo.toml
crates/kria-server/src/: auth.rs  lib.rs  main.rs  routes.rs  ws.rs
crates/kria-server/tests/: integration_api.rs  integration_ws.rs
diagrams/: 01_high_level_architecture.mmd  02_voice_interaction_sequence.mmd  03_memory_allocation_strategy.mmd  04_docker_deployment.mmd  05_safety_guardrail_system.mmd  mermaid-config.json  puppeteer-config.json
docker/: docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml
docker/brain/: Dockerfile  Dockerfile.gpu  entrypoint.sh
docs/: HARDWARE_ORCHESTRATION.md  HOW_TO_RUN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  ImplementationPlan.md  NEW_ARCHITECTURE.md  NewMCPGuidelines.md  NewToolGuidelines.md  QUERIES.md  SAFETY_SPECIFICATION.md  SPEECH_RECOGNITION.md  SYSTEM_DESIGN_DOCUMENT.md
docs-old/: IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  QUERIES.md  SPEECH_RECOGNITION.md  SYSTEM_DESIGN_DOCUMENT.md
kria-modules/: pyproject.toml
kria-modules/src/kria_modules/: __init__.py  bridge.py
kria-modules/src/kria_modules/processors/: __init__.py  audio.py  code.py  document.py  embeddings.py  google.py  image.py  news.py  web.py
kria-modules/src/kria_modules/telegram_mcp/: __init__.py  server.py
kria-modules/tests/: test_image_processor.py
scripts/: app-restart.sh  app-start.sh  app-stop.sh  build-release.ps1  build-release.sh  detect_hardware.sh  docker-entrypoint.sh  download_models.py  google_workspace_smoke_matrix.sh  kria_bridge.py  setup.ps1  setup.sh  setup_comfyui.sh  setup_google_workspace.sh  setup_python.sh  test_voice_pipeline.py  uninstall.ps1  uninstall.sh
tests/: TESTING.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+144 files in other folders)
