[workspace]
members = ["crates/kria-core", "crates/kria-desktop", "crates/kria-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KRIA Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Concurrent data structures
dashmap = "6"

# System info
sysinfo = "0.32"

# Filesystem
walkdir = "2"
globset = "0.4"
notify = "7"

# Regex
regex = "1"
once_cell = "1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }

# Durable embedded queue (inbox pipeline)
fjall = "2"
rmp-serde = "1"

# Rate limiting & retry (inbox pipeline)
governor = "0.6"
backoff = { version = "0.4", features = ["tokio"] }

# Clipboard
arboard = "3"

# Notifications
notify-rust = "4"

# Audio
cpal = "0.15"
rodio = "0.19"

# ONNX Runtime (for VAD, TTS)
ort = "2.0.0-rc.12"
ndarray = "0.17"

# Image processing
image = "0.25"

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Web scraping
scraper = "0.21"

# Async channels
async-trait = "0.1"
futures = "0.3"

# Config
dirs = "5"

# Open URLs/files in default app
open = "5"

# URL parsing and construction
url = { version = "2", features = ["serde"] }

# Base64 encoding/decoding (used for image data URL responses)
base64 = "0.22"

# Unicode text normalization (for contact matching)
unicode-normalization = "0.1"

# GPU telemetry (NVIDIA)
nvml-wrapper = "0.10"

# Async utilities (CancellationToken)
tokio-util = "0.7"

# WebSocket client (image-gen WS progress bridge)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Hashing
blake3 = "1"
hex = "0.4"

# Memory-mapped files
memmap2 = "0.9"

# Semantic embeddings (ONNX-based, no Python)
fastembed = "5"

# Grammar-constrained LLM decoding
llguidance = "0.7"

# POSIX bindings (prctl, setsid, kill — Unix only)
libc = "0.2"

# URL percent-encoding (image cloud fallback)
urlencoding = "2"

# ── Build profiles ──────────────────────────────────────────────────────
# Dev profile is tuned to keep peak compile RAM low so `cargo tauri dev`
# doesn't OOM-freeze low-RAM machines (the previous default of 256 codegen
# units + parallel codegen could push linker memory above 8 GiB).
[profile.dev]
opt-level = 0
debug = 1            # line tables only — full debug info doubled link RAM
codegen-units = 16   # cap parallelism (default is 256 for dev)
incremental = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "debuginfo"
panic = "abort"
