[project]
name = "kria"
version = "1.0.0"
description = "K.R.I.A. — Kernel-Responsive Intelligent Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "chromadb>=0.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psutil>=6.0.0",
    "aiosqlite>=0.20.0",
    "websockets>=13.0",
    "trafilatura>=1.12.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
]
voice = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.19.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0",
]
windows = [
    "pywin32>=306",
    "pycaw>=20240210",
    "comtypes>=1.4.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
