[package]
name = "kria-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "K.R.I.A. — Kernel-Responsive Intelligent Agent (shared core library)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
dashmap = { workspace = true }
sysinfo = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
arboard = { workspace = true }
notify-rust = { workspace = true }
cpal = { workspace = true }
rodio = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
scraper = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
url = { workspace = true }
unicode-normalization = { workspace = true }
tokio-util = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }
blake3 = { workspace = true }
hex = { workspace = true }
memmap2 = { workspace = true }
fastembed = { workspace = true }
llguidance = { workspace = true }

[features]
nvidia = ["nvml-wrapper"]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Ring 4: Linux seccomp-bpf syscall filter
seccompiler = "0.4"

[dev-dependencies]
tempfile = "3"
