[package]
name = "kria-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "K.R.I.A. Desktop — Tauri v2 native desktop application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kria-core = { path = "../kria-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
